--- a/css/style.css
+++ b/css/style.css
@@ -595,6 +595,26 @@ video {
   margin-top: auto;
 }
 
+.mt-4 {
+  margin-top: 1rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mt-20 {
+  margin-top: 5rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
 .flex {
   display: flex;
 }
@@ -639,8 +659,20 @@ video {
   justify-content: space-between;
 }
 
+.justify-items-center {
+  justify-items: center;
+}
+
+.gap-10 {
+  gap: 2.5rem;
+}
+
 .gap-4 {
   gap: 1rem;
+}
+
+.gap-8 {
+  gap: 2rem;
 }
 
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
@@ -822,18 +854,6 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:m-12 {
-    margin: 3rem;
-  }
-
-  .md\:ml-20 {
-    margin-left: 5rem;
-  }
-
-  .md\:ml-24 {
-    margin-left: 6rem;
-  }
-
   .md\:ml-28 {
     margin-left: 7rem;
   }
@@ -842,8 +862,24 @@ video {
     margin-right: 7rem;
   }
 
+  .md\:h-96 {
+    height: 24rem;
+  }
+
+  .md\:w-auto {
+    width: auto;
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:flex-row {
+    flex-direction: row;
+  }
+
+  .md\:justify-center {
+    justify-content: center;
   }
 
   .md\:p-10 {
@@ -852,32 +888,28 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:ml-52 {
+    margin-left: 13rem;
+  }
+
   .lg\:ml-6 {
     margin-left: 1.5rem;
+  }
+
+  .lg\:mr-52 {
+    margin-right: 13rem;
   }
 
   .lg\:mt-20 {
     margin-top: 5rem;
   }
 
-  .lg\:ml-40 {
-    margin-left: 10rem;
+  .lg\:h-96 {
+    height: 24rem;
   }
 
-  .lg\:mr-40 {
-    margin-right: 10rem;
-  }
-
-  .lg\:ml-52 {
-    margin-left: 13rem;
-  }
-
-  .lg\:mr-5 {
-    margin-right: 1.25rem;
-  }
-
-  .lg\:mr-52 {
-    margin-right: 13rem;
+  .lg\:w-auto {
+    width: auto;
   }
 
   .lg\:grid-cols-3 {
@@ -894,10 +926,6 @@ video {
 
   .lg\:pr-20 {
     padding-right: 5rem;
-  }
-
-  .lg\:text-center {
-    text-align: center;
   }
 
   .lg\:text-2xl {
